# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\TeaController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -23,4 +24,16 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::post('/login',[AuthController::class, 'login']);
 Route::post('/register',[AuthController::class, 'register']);
 Route::get('/getImage',[AuthController::class, 'getUserImageNameByEmail']);
+
+
+Route::get('/getAllTea', [TeaController::class, 'getAll']);
+Route::get('/getBlackTea', [TeaController::class, 'getBlackTea']);
+Route::get('/getGreenTea', [TeaController::class, 'getGreenTea']);
+Route::get('/getYellowTea', [TeaController::class, 'getYellowTea']);
+Route::get('/getOolongTea', [TeaController::class, 'getOolongTea']);
+Route::get('/getWhiteTea', [TeaController::class, 'getWhiteTea']);
+Route::get('/getPuerhTea', [TeaController::class, 'getPuerhTea']);
+Route::get('/getMatchaTea', [TeaController::class, 'getMatchaTea']);
+
+Route::get('/getTea/{id}', [TeaController::class, 'getTeaById']);
 
